--- a/a.css
+++ b/a.css
@@ -1,7 +1,10 @@
 body {
-    background-color: black;
-    color: white;
+    background-color: #EFEFEF;
     margin: 0;
+}
+* {
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -15,42 +18,54 @@ a {
 }
 
 .topNavBar {
-    padding: 20px 16px 20px 16px;
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.topNavBar-inner {
+    padding: 0 16px;
 }
 .topNavBar > a {
     float: left;
+    display: block;
 }
-.topNavBar > nav {
+.topNavBar nav {
     float: right;
+    padding-top: 7px;
 }
-.topNavBar > nav > ul {
+.topNavBar nav > ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.topNavBar > nav > ul > li {
+.topNavBar nav > ul > li {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
 }
 
-.topNavBar > nav > ul > li > a {
-    font-size: 13px;
+.topNavBar nav > ul > li > a {
+    font-size: 12px;
     font-weight: bold;
     color: rgb(255, 255, 255, 0.7);
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
     padding-top: 5px;
     padding-bottom: 5px;
-    display: block;
+    display: inline-block;
 }
-.topNavBar > nav > ul > li > a:hover {
+.topNavBar nav > ul > li > a:hover {
     border-bottom: 3px solid #e06567;
 }
 .topNavBar .logo {
     font-size: 24px;
-    font-family: "Arial black"; 
+    font-family: "Arial black";
+    padding-top: 4px;
+    padding-bottom: 3px; 
+    display: inline-block;
 }
 .topNavBar .logo .rs{
     margin-right: 4px;
@@ -58,4 +73,99 @@ a {
 }
 .topNavBar .logo .card {
     color: #9a9da2;
+}
+
+.banner {
+    background-image:url(./img/rs-cover.jpg);
+    height: 515px;
+    background-size: cover;
+    background-position: center center;
+}
+
+.banner .mask {
+    height: 515px;
+    background-color: rgb(0,0,0,0.8);
+}
+
+.userCard {
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
+}
+
+main .userCard .welcome {
+    background-color: rgb(230,104,106);
+    color: white;
+    display: inline-block;
+    padding: 4px 16px;
+    line-height: 22px;
+    text-align: center;
+    position: relative;
+}
+main .userCard .welcome .triangle {
+    display: block;
+    border: 10px solid transparent;
+    border-top-width: 0;
+    border-left-color: rgb(230,104,106);
+    width: 0;
+    position: absolute;
+    left: 4px;
+    top: 100%;
+}
+
+main .userCard .pictureAndText {
+    padding: 50px;
+}
+main .userCard .picture {
+    float: left;
+}
+main  .userCard .text {
+    float: left;
+    margin-left: 65px;
+    width: 470px;  
+}
+main .userCard h1 {
+    margin-top: 18px;
+}
+main .userCard hr {
+    border: none;
+    height: 0;
+    border-top: 1px solid #dedede;
+    margin: 20px 0;
+}
+main .userCard .text dl {
+
+}
+main .userCard .text dl dt {
+    float: left;
+    width: 30%;
+    padding: 5px 0px;
+    font-weight: bold;
+}
+main .userCard .text dl dd {
+    float: left;
+    width: 70%;
+    padding: 5px 0px;
+    color: #9da0a7;
+}
+
+main .userCard > footer.media {
+    background-color: #e6686a;
+    text-align: center;
+}
+main .userCard > footer.media a {
+    border-radius: 50%;
+    display: inline-block;
+    padding: 5px 5px;
+    margin: 16px 16px;
+}
+main .userCard > footer.media a:hover {
+    background-color: #cf5d5f;
+}
+
+main .userCard > footer.media svg {
+    height: 30px;
+    width: 30px;
+    fill: white;
 }
