--- a/a.css
+++ b/a.css
@@ -6,7 +6,12 @@ body {
     margin: 0;
     padding: 0;
 }
-
+ol,ul {
+    list-style: none;
+}
+h1,h2,h3,h4,h5,h6 {
+    font-weight: normal;
+}
 a {
     color: inherit;
     text-decoration: none;
@@ -50,7 +55,7 @@ a {
 .topNavBar nav > ul > li > a {
     font-size: 12px;
     font-weight: bold;
-    color: rgb(255, 255, 255, 0.7);
+    color: #b7b7b7;
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
     padding-top: 5px;
@@ -87,11 +92,12 @@ a {
     background-color: rgb(0,0,0,0.8);
 }
 
-.userCard {
+main .userCard {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 main .userCard .welcome {
@@ -134,9 +140,7 @@ main .userCard hr {
     border-top: 1px solid #dedede;
     margin: 20px 0;
 }
-main .userCard .text dl {
 
-}
 main .userCard .text dl dt {
     float: left;
     width: 30%;
@@ -168,4 +172,153 @@ main .userCard > footer.media svg {
     height: 30px;
     width: 30px;
     fill: white;
+}
+
+main {
+    margin-top: -340px;
+}
+main .resumeDownload {
+    text-align: center;
+}
+main .resumeDownload > a.button {
+    border: 1px solid  #cdcfd1;
+    border-radius: 2px;
+    background-color: #efefef;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: bold;
+    color: #3d4451;
+    display: inline-block;
+    padding: 21px 55px;
+    margin: 32px 0px;
+    transition: box-shadow 0.2s;
+}
+main .resumeDownload > a.button:hover {
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
+}
+
+main .selfIntroduction {
+    text-align: center;
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+    line-height: 1.8;
+}
+
+section.skills,
+section.portfolio{
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto; 
+    margin-top: 60px;    
+}
+section.skills > h2,
+section.portfolio > h2 {
+    text-align: center;
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+
+section.skills > ol {
+    background-color: #fff;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+    padding: 42px 50px 10px;
+    margin-top: 30px;
+}
+section.skills > ol > li {
+    float: left;
+    width: 48%;
+}
+section.skills > ol > li:nth-child(even) {
+    float: right;
+}
+section.skills > ol > li > h3 {
+    font-size: 14px;
+    line-height: 1.1;
+}
+
+section.skills > ol > li > .progressBar {
+    height: 5px;
+    background-color: #FAE1E1;
+    border-radius: 3px;
+    margin: 4px 0 40px;
+}   
+section.skills > ol > li > .progressBar > .progress {
+    background-color: #E6686A;
+    width: 50%;
+    height: 100%;
+    border-radius: 3px;
+}
+
+section.portfolio { 
+    text-align: center;
+    margin-bottom: 100px;
+}
+section.portfolio > nav {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 32px;
+}
+section.portfolio > nav > ol {
+    display: inline-block;
+    vertical-align: top;
+    cursor: pointer;
+}
+section.portfolio >nav > ol > li {
+    float: left;
+    margin-left: 40px;
+}
+section.portfolio >nav > ol > li:first-child {
+    margin-left: 0;
+}
+section.portfolio .bar {
+    height: 5px;
+    background-color: white;
+    border-radius: 3px;
+    margin: 5px 0 28px;
+}
+section.portfolio .bar.state-1 .bar-inner {
+    background-color: #E6686A;
+    width: 13%;
+    height: 5px;
+    border-radius: 3px;
+    transition: all 1s;
+}
+section.portfolio .bar.state-2 .bar-inner {
+    background-color: #E6686A;
+    width: 14%;
+    height: 5px;
+    border-radius: 3px;
+    margin-left: 72px;
+    transition: all 1s;
+}
+section.portfolio .bar.state-3 .bar-inner {
+    background-color: #E6686A;
+    width: 38%;
+    height: 5px;
+    border-radius: 3px;
+    margin-left: 145px;
+    transition: all 1s;
+}
+section.portfolio .works {
+    position: relative;
+    height: 597px;
+}
+section.portfolio .works .pic-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+section.portfolio .works .pic-2 {
+    position: absolute;
+    top: 0;
+    left: 645px;
+}
+section.portfolio .works .pic-3 {
+    position: absolute;
+    top: 312px;
+    left: 645px;
 }
