--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ a {
     width: 100%;
     height: 100%;
     background: grey;
-    z-index: 1;
+    z-index: 2;
 }
 .siteWelcome.active{
     display: block;
@@ -82,6 +82,15 @@ a {
     top: 0;
     left: 0;
     width: 100%;
+    transition: all 0.8s;
+    z-index: 1;
+    color: #b7b7b7;
+}
+.topNavBar.sticky {
+    padding: 10px 0;
+    background-color: white;
+    box-shadow: 0 0 5px 0 rgb(0,0,0,0.5);
+    color: #3d4451;
 }
 .topNavBar-inner {
     padding: 0 16px;
@@ -109,7 +118,7 @@ a {
 .topNavBar nav > ul > li > a {
     font-size: 12px;
     font-weight: bold;
-    color: #b7b7b7;
+    color: inherit;
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
     padding-top: 5px;
