修改轮播箭头颜色

--- a/main.css
+++ b/main.css
@@ -343,7 +343,7 @@ section.portfolio .swiper-container {
 }
 section.portfolio .swiper-container .swiper-button-prev,
 section.portfolio .swiper-container .swiper-button-next{
-    color: white;
+    color: grey;
 }
 
 [location] {
